# friend_trackmania_leaderboard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/friend_trackmania_leaderboard/: main.py
src/friend_trackmania_leaderboard/cfg/: cfg.toml
test/: test_methods.py
